--- a/one2dream/contact.html
+++ b/one2dream/contact.html
@@ -81,28 +81,17 @@
 </header>
 <div class="Bline">
   <div class="mBline">
-    <h6>НАЗВАНИЕ НОВОСТИ</h6>
+    <h6>Контакты</h6>
 
-    <div><a href="index.html">Главная</a>/<a href="№">Название новости</a></div>
+    <div><a href="index.html">Главная</a>/<a>Контакты</a></div>
   </div>
 </div>
 
-<h1 class="h1">НАЗВАНИЕ НОВОСТИ</h1>
-<img src="img/abdomen.jpg" alt="роды в США" class="mid">
+<h1 class="h1">КОНТАКТЫ</h1>
+<iframe
+    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2560.590263690216!2d14.436172148865861!3d50.075234667499984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1suk!2sua!4v1474008992343"
+    width="1110" height="343" class="map" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-<div class="content">
-  Все без исключения признают американскую медицину самой лучшей, а профессионализм врачей, работающих в клиниках
-  Америки не имеет себе равных. Оказание медицинских услуг отвечает высокому уровню сервиса. Медицинские сотрудники
-  готовы принять даже самые тяжелые роды и обеспечить круглосуточный уход за роженицей. Во всех госпиталях установлено
-  новейшее оборудование, которое постоянно обновляется. Оснащение американских клиник в США считается главной задачей
-  правительства, оно старается создавать идеальные условия, чтобы будущая мама и ее ребенок были в безопасности.
-  <br><br>
-  Все без исключения признают американскую медицину самой лучшей, а профессионализм врачей, работающих в клиниках
-  Америки не имеет себе равных. Оказание медицинских услуг отвечает высокому уровню сервиса. Медицинские сотрудники
-  готовы принять даже самые тяжелые роды и обеспечить круглосуточный уход за роженицей. Во всех госпиталях установлено
-  новейшее оборудование, которое постоянно обновляется. Оснащение американских клиник в США считается главной задачей
-  правительства, оно старается создавать идеальные условия, чтобы будущая мама и ее ребенок были в безопасности.
-</div>
 
 <div class="clearAll"></div>
 <div class="ourContacts">
@@ -115,7 +104,8 @@
     ПОЧТА: <br/>
     <span>one2dream.ua@gmail.com</span> <br/>
 
-    <a href="#">открыть карту</a>
+    <div id="f"><a href="https://www.facebook.com/"><i class="fa fa-facebook" aria-hidden="true"></i></a></div>
+    <div id="vk"><a href="https://www.vk.com/"><i class="fa fa-vk" aria-hidden="true"></i></a></div>
   </div>
   <div class="form">
     <form action="post">
