--- a/one2dream/doctors.html
+++ b/one2dream/doctors.html
@@ -81,27 +81,41 @@
 </header>
 <div class="Bline">
   <div class="mBline">
-    <h6>НАЗВАНИЕ НОВОСТИ</h6>
+    <h6>Доктора</h6>
 
-    <div><a href="index.html">Главная</a>/<a href="№">Название новости</a></div>
+    <div><a href="index.html">Главная</a>/<a>Доктора</a></div>
   </div>
 </div>
 
-<h1 class="h1">НАЗВАНИЕ НОВОСТИ</h1>
-<img src="img/abdomen.jpg" alt="роды в США" class="mid">
+<h1 class="h1">ДОКТОРА</h1>
 
-<div class="content">
-  Все без исключения признают американскую медицину самой лучшей, а профессионализм врачей, работающих в клиниках
-  Америки не имеет себе равных. Оказание медицинских услуг отвечает высокому уровню сервиса. Медицинские сотрудники
-  готовы принять даже самые тяжелые роды и обеспечить круглосуточный уход за роженицей. Во всех госпиталях установлено
-  новейшее оборудование, которое постоянно обновляется. Оснащение американских клиник в США считается главной задачей
-  правительства, оно старается создавать идеальные условия, чтобы будущая мама и ее ребенок были в безопасности.
-  <br><br>
-  Все без исключения признают американскую медицину самой лучшей, а профессионализм врачей, работающих в клиниках
-  Америки не имеет себе равных. Оказание медицинских услуг отвечает высокому уровню сервиса. Медицинские сотрудники
-  готовы принять даже самые тяжелые роды и обеспечить круглосуточный уход за роженицей. Во всех госпиталях установлено
-  новейшее оборудование, которое постоянно обновляется. Оснащение американских клиник в США считается главной задачей
-  правительства, оно старается создавать идеальные условия, чтобы будущая мама и ее ребенок были в безопасности.
+<div class="doctors mid">
+  <div>
+    <img src="img/doctor.png" alt="Роды в США, Доктор">
+    <span>Алисия Эйкон</span>
+    Alicia Acon, MD Obstetrician & Gynecologist
+  </div>
+  <div>
+    <img src="img/doctor.png" alt="Роды в США, Доктор">
+    <span>Алисия Эйкон</span>
+    Alicia Acon, MD Obstetrician & Gynecologist
+  </div>
+  <div>
+    <img src="img/doctor.png" alt="Роды в США, Доктор">
+    <span>Алисия Эйкон</span>
+    Alicia Acon, MD Obstetrician & Gynecologist
+  </div>
+  <div>
+    <img src="img/doctor.png" alt="Роды в США, Доктор">
+    <span>Алисия Эйкон</span>
+    Alicia Acon, MD Obstetrician & Gynecologist
+  </div>
+  <div>
+    <img src="img/doctor.png" alt="Роды в США, Доктор">
+    <span>Алисия Эйкон</span>
+    Alicia Acon, MD Obstetrician & Gynecologist
+  </div>
+
 </div>
 
 <div class="clearAll"></div>
