--- a/one2dream/index.html
+++ b/one2dream/index.html
@@ -20,39 +20,39 @@
         <div class="nav">
           <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
-        <div class="coll"><i class="fa fa-phone" aria-hidden="true"></i></div>
+        <div class="coll"></div>
         <div class="number">
           <span><i class="fa fa-phone" aria-hidden="true"></i> 8 800 1234 567</span>
           <a class="call">заказать звонок</a>
           <span>Eng</span>
         </div>
         <ul class="mainMenu">
-          <li><a href="">Услуги</a>
-            <ul class="subMenu">
-              <li><a href="visaAplication.html">Роды в Денвере</a></li>
-              <li><a href="#">Оформление визы в США</a></li>
-              <li><a href="#">Оформление документов</a></li>
-              <li><a href="#">Аренда жилья в Колорадо</a></li>
-              <li><a href="rentCar.html">Аренда автомобиля</a></li>
-            </ul>
+          <li><a href="service.html"><i class="fa fa-chevron-down"></i>Услуги</a>
+          <ul class="subMenu">
+            <li><a href="visaAplication.html">Роды в Денвере</a></li>
+            <li><a href="visaAplication.html">Оформление визы в США</a></li>
+            <li><a href="visaAplication.html">Оформление документов</a></li>
+            <li><a href="rentCar.html">Аренда жилья в Колорадо</a></li>
+            <li><a href="rentCar.html">Аренда автомобиля</a></li>
+          </ul>
           </li>
-          <li><a href="">Медицина</a>
-            <ul class="subMenu">
-              <li><a href="#">Общая информация</a></li>
-              <li><a href="#">Госпитали</a></li>
-              <li><a href="#">Доктора</a></li>
-            </ul>
+          <li><a href="service.html"><i class="fa fa-chevron-down"></i>Медицина</a>
+          <ul class="subMenu">
+            <li><a href="visaAplication.html">Общая информация</a></li>
+            <li><a href="hospitals.html">Госпитали</a></li>
+            <li><a href="doctors.html">Доктора</a></li>
+          </ul>
           </li>
-          <li><a href="">Цены</a>
-            <ul class="subMenu">
-              <li><a href="#">Пакет &#171;Стандарт&#187;</a></li>
-              <li><a href="#">Пакет &#171;Максимум&#187;</a></li>
-              <li><a href="#">Примерный бюджет поездки</a></li>
-            </ul>
+          <li><a href="service.html"><i class="fa fa-chevron-down"></i>Цены</a>
+          <ul class="subMenu">
+            <li><a href="package.html">Пакет &#171;Стандарт&#187;</a></li>
+            <li><a href="package.html">Пакет &#171;Максимум&#187;</a></li>
+            <li><a href="package.html">Примерный бюджет поездки</a></li>
+          </ul>
           </li>
           <li><a href="FAQ.html">FAQ</a>
           </li>
-          <li><a href="#">Контакты</a>
+          <li><a href="contact.html">Контакты</a>
           </li>
         </ul>
         <div class="clearAll"></div>
