--- a/one2dream/service.html
+++ b/one2dream/service.html
@@ -27,7 +27,7 @@
           <span>Eng</span>
         </div>
         <ul class="mainMenu">
-          <li><a href="service.html"><i class="fa fa-chevron-down"></i>Услуги</a>
+          <li><a href=""><i class="fa fa-chevron-down"></i>Услуги</a>
             <ul class="subMenu">
               <li><a href="visaAplication.html">Роды в Денвере</a></li>
               <li><a href="visaAplication.html">Оформление визы в США</a></li>
@@ -81,27 +81,46 @@
 </header>
 <div class="Bline">
   <div class="mBline">
-    <h6>НАЗВАНИЕ НОВОСТИ</h6>
+    <h6>Услуги</h6>
 
-    <div><a href="index.html">Главная</a>/<a href="№">Название новости</a></div>
+    <div><a href="index.html">Главная</a>/<a>Услуги</a></div>
   </div>
 </div>
 
-<h1 class="h1">НАЗВАНИЕ НОВОСТИ</h1>
-<img src="img/abdomen.jpg" alt="роды в США" class="mid">
+<h1 class="h1">Услуги</h1>
 
-<div class="content">
-  Все без исключения признают американскую медицину самой лучшей, а профессионализм врачей, работающих в клиниках
-  Америки не имеет себе равных. Оказание медицинских услуг отвечает высокому уровню сервиса. Медицинские сотрудники
-  готовы принять даже самые тяжелые роды и обеспечить круглосуточный уход за роженицей. Во всех госпиталях установлено
-  новейшее оборудование, которое постоянно обновляется. Оснащение американских клиник в США считается главной задачей
-  правительства, оно старается создавать идеальные условия, чтобы будущая мама и ее ребенок были в безопасности.
-  <br><br>
-  Все без исключения признают американскую медицину самой лучшей, а профессионализм врачей, работающих в клиниках
-  Америки не имеет себе равных. Оказание медицинских услуг отвечает высокому уровню сервиса. Медицинские сотрудники
-  готовы принять даже самые тяжелые роды и обеспечить круглосуточный уход за роженицей. Во всех госпиталях установлено
-  новейшее оборудование, которое постоянно обновляется. Оснащение американских клиник в США считается главной задачей
-  правительства, оно старается создавать идеальные условия, чтобы будущая мама и ее ребенок были в безопасности.
+
+<div class="cont">
+<div>
+  <img src="img/berem.jpg" alt="роды в сша">
+  ПАСПОРТ ГРАЖДАНИНА США
+  <a href="News.html">подробнее</a>
+</div>
+  <div>
+    <img src="img/berem.jpg" alt="роды в сша">
+    ПАСПОРТ ГРАЖДАНИНА США
+    <a href="News.html">подробнее</a>
+  </div>
+  <div>
+    <img src="img/berem.jpg" alt="роды в сша">
+    ПАСПОРТ ГРАЖДАНИНА США
+    <a href="News.html">подробнее</a>
+  </div>
+  <div>
+    <img src="img/berem.jpg" alt="роды в сша">
+    ПАСПОРТ ГРАЖДАНИНА США
+    <a href="News.html">подробнее</a>
+  </div>
+  <div>
+    <img src="img/berem.jpg" alt="роды в сша">
+    ПАСПОРТ ГРАЖДАНИНА США
+    <a href="News.html">подробнее</a>
+  </div>
+  <div>
+    <img src="img/berem.jpg" alt="роды в сша">
+    ПАСПОРТ ГРАЖДАНИНА США
+    <a href="News.html">подробнее</a>
+  </div>
 </div>
 
 <div class="clearAll"></div>
