--- a/one2dream/hospitals.html
+++ b/one2dream/hospitals.html
@@ -36,7 +36,7 @@
               <li><a href="rentCar.html">Аренда автомобиля</a></li>
             </ul>
           </li>
-          <li><a href="service.html"><i class="fa fa-chevron-down"></i>Медицина</a>
+          <li><a >Медицина</a>
             <ul class="subMenu">
               <li><a href="visaAplication.html">Общая информация</a></li>
               <li><a href="hospitals.html">Госпитали</a></li>
