--- a/one2dream/service.html
+++ b/one2dream/service.html
@@ -36,7 +36,7 @@
               <li><a href="rentCar.html">Аренда автомобиля</a></li>
             </ul>
           </li>
-          <li><a href="service.html"><i class="fa fa-chevron-down"></i>Медицина</a>
+          <li><a>Медицина</a>
             <ul class="subMenu">
               <li><a href="visaAplication.html">Общая информация</a></li>
               <li><a href="hospitals.html">Госпитали</a></li>
@@ -93,33 +93,28 @@
 <div class="cont">
 <div>
   <img src="img/berem.jpg" alt="роды в сша">
-  ПАСПОРТ ГРАЖДАНИНА США
-  <a href="News.html">подробнее</a>
+  Роды в Денвере
+  <a href="visaAplication.html">подробнее</a>
 </div>
   <div>
     <img src="img/berem.jpg" alt="роды в сша">
-    ПАСПОРТ ГРАЖДАНИНА США
-    <a href="News.html">подробнее</a>
+    Оформление визы в США
+    <a href="visaAplication.html">подробнее</a>
   </div>
   <div>
     <img src="img/berem.jpg" alt="роды в сша">
-    ПАСПОРТ ГРАЖДАНИНА США
-    <a href="News.html">подробнее</a>
+    Оформление документов
+    <a href="visaAplication.html">подробнее</a>
   </div>
   <div>
     <img src="img/berem.jpg" alt="роды в сша">
-    ПАСПОРТ ГРАЖДАНИНА США
-    <a href="News.html">подробнее</a>
+    Аренда жилья в Колорадо
+    <a href="rentCar.html">подробнее</a>
   </div>
   <div>
     <img src="img/berem.jpg" alt="роды в сша">
-    ПАСПОРТ ГРАЖДАНИНА США
-    <a href="News.html">подробнее</a>
-  </div>
-  <div>
-    <img src="img/berem.jpg" alt="роды в сша">
-    ПАСПОРТ ГРАЖДАНИНА США
-    <a href="News.html">подробнее</a>
+    Аренда автомобиля
+    <a href="rentCar.html">подробнее</a>
   </div>
 </div>
 
