--- a/one2dream/index.html
+++ b/one2dream/index.html
@@ -36,7 +36,7 @@
             <li><a href="rentCar.html">Аренда автомобиля</a></li>
           </ul>
           </li>
-          <li><a href="service.html"><i class="fa fa-chevron-down"></i>Медицина</a>
+          <li><a>Медицина</a>
           <ul class="subMenu">
             <li><a href="visaAplication.html">Общая информация</a></li>
             <li><a href="hospitals.html">Госпитали</a></li>
@@ -83,9 +83,6 @@
 <div class="bunner">
   <div class="sliders">
     <div class="slider active-slider">
-      <img src="img/slide1.jpg">
-    </div>
-    <div class="slider">
       <img src="img/slid2.jpg">
     </div>
     <div class="slider">
