--- a/one2dream/contact.html
+++ b/one2dream/contact.html
@@ -62,11 +62,11 @@
             <div class="form1">
               <form action="post">
                 <div>
-                  <label for="name">ИМЯ:</label><input id="name" type="text" value=""/>
+                  <label for="name">ИМЯ:</label><input id="name" type="text" required value=""/>
                 </div>
 
                 <div>
-                  <label for="phone">ТЕЛЕФОН:</label><input id="phone" type="tel" value=""/>
+                  <label for="phone">ТЕЛЕФОН:</label><input id="phone" type="tel" required value=""/>
                 </div>
                 <input type="submit" value="отправить"/>
               </form>
@@ -110,13 +110,13 @@
   <div class="form">
     <form action="post">
       <div>
-        <label for="name1">ИМЯ:</label><input id="name1" type="text" value=""/>
+        <label for="name1">ИМЯ:</label><input id="name1" type="text" required value=""/>
       </div>
       <div>
-        <label for="mail">E-MAIL:</label><input id="mail" type="email" value=""/>
+        <label for="mail">E-MAIL:</label><input id="mail" type="email" required value=""/>
       </div>
       <div>
-        <label for="phone1">ТЕЛЕФОН:</label><input id="phone1" type="tel" value=""/>
+        <label for="phone1">ТЕЛЕФОН:</label><input id="phone1" type="tel" required value=""/>
       </div>
       <div>
         <label for="textarea">СООБЩЕНИЕ: </label><textarea id="textarea"></textarea>
