--- a/one2dream/contact.html
+++ b/one2dream/contact.html
@@ -60,7 +60,7 @@
           <div id="overlay"></div>
           <div id="modal_form_recall1" class="animated slideInDown">
             <div class="form1">
-              <form action="post">
+              <form>
                 <div>
                   <label for="name">ИМЯ:</label><input id="name" type="text" required value=""/>
                 </div>
@@ -108,7 +108,7 @@
     <div id="vk"><a href="https://www.vk.com/"><i class="fa fa-vk" aria-hidden="true"></i></a></div>
   </div>
   <div class="form">
-    <form action="post">
+    <form>
       <div>
         <label for="name1">ИМЯ:</label><input id="name1" type="text" required value=""/>
       </div>
