--- a/one2dream/doctors.html
+++ b/one2dream/doctors.html
@@ -60,7 +60,7 @@
           <div id="overlay"></div>
           <div id="modal_form_recall1" class="animated slideInDown">
             <div class="form1">
-              <form action="post">
+              <form >
                 <div>
                   <label for="name">ИМЯ:</label><input id="name" type="text" value=""/>
                 </div>
@@ -132,7 +132,7 @@
     <a href="#">открыть карту</a>
   </div>
   <div class="form">
-    <form action="post">
+    <form >
       <div>
         <label for="name1">ИМЯ:</label><input id="name1" type="text" value=""/>
       </div>
