--- a/one2dream/hospitals.html
+++ b/one2dream/hospitals.html
@@ -36,7 +36,7 @@
               <li><a href="rentCar.html">Аренда автомобиля</a></li>
             </ul>
           </li>
-          <li><a >Медицина</a>
+          <li><a ><Медицина</a>
             <ul class="subMenu">
               <li><a href="visaAplication.html">Общая информация</a></li>
               <li><a href="hospitals.html">Госпитали</a></li>
@@ -60,7 +60,7 @@
           <div id="overlay"></div>
           <div id="modal_form_recall1" class="animated slideInDown">
             <div class="form1">
-              <form action="post">
+              <form >
                 <div>
                   <label for="name">ИМЯ:</label><input id="name" type="text" value=""/>
                 </div>
@@ -157,7 +157,7 @@
     <a href="#">открыть карту</a>
   </div>
   <div class="form">
-    <form action="post">
+    <form >
       <div>
         <label for="name1">ИМЯ:</label><input id="name1" type="text" value=""/>
       </div>
