--- a/one2dream/doctors.html
+++ b/one2dream/doctors.html
@@ -62,11 +62,11 @@
             <div class="form1">
               <form >
                 <div>
-                  <label for="name">ИМЯ:</label><input id="name" type="text" value=""/>
+                  <label for="name">ИМЯ:</label><input id="name" required type="text" value=""/>
                 </div>
 
                 <div>
-                  <label for="phone">ТЕЛЕФОН:</label><input id="phone" type="tel" value=""/>
+                  <label for="phone">ТЕЛЕФОН:</label><input id="phone" required type="tel" value=""/>
                 </div>
                 <input type="submit" value="отправить"/>
               </form>
@@ -134,13 +134,13 @@
   <div class="form">
     <form >
       <div>
-        <label for="name1">ИМЯ:</label><input id="name1" type="text" value=""/>
+        <label for="name1">ИМЯ:</label><input id="name1" required type="text" value=""/>
       </div>
       <div>
-        <label for="mail">E-MAIL:</label><input id="mail" type="email" value=""/>
+        <label for="mail">E-MAIL:</label><input id="mail" required type="email" value=""/>
       </div>
       <div>
-        <label for="phone1">ТЕЛЕФОН:</label><input id="phone1" type="tel" value=""/>
+        <label for="phone1">ТЕЛЕФОН:</label><input id="phone1" required type="tel" value=""/>
       </div>
       <div>
         <label for="textarea">СООБЩЕНИЕ: </label><textarea id="textarea"></textarea>
