--- a/one2dream/index.html
+++ b/one2dream/index.html
@@ -43,7 +43,7 @@
             <li><a href="doctors.html">Доктора</a></li>
           </ul>
           </li>
-          <li><a href="service.html"><i class="fa fa-chevron-down"></i>Цены</a>
+          <li><a>Цены</a>
           <ul class="subMenu">
             <li><a href="package.html">Пакет &#171;Стандарт&#187;</a></li>
             <li><a href="package.html">Пакет &#171;Максимум&#187;</a></li>
