--- a/one2dream/hospitals.html
+++ b/one2dream/hospitals.html
@@ -36,14 +36,14 @@
               <li><a href="rentCar.html">Аренда автомобиля</a></li>
             </ul>
           </li>
-          <li><a ><Медицина</a>
+          <li><a>Медицина</a>
             <ul class="subMenu">
               <li><a href="visaAplication.html">Общая информация</a></li>
               <li><a href="hospitals.html">Госпитали</a></li>
               <li><a href="doctors.html">Доктора</a></li>
             </ul>
           </li>
-          <li><a>Цены</a>
+          <li><a></i>Цены</a>
             <ul class="subMenu">
               <li><a href="package.html">Пакет &#171;Стандарт&#187;</a></li>
               <li><a href="package.html">Пакет &#171;Максимум&#187;</a></li>
