--- a/one2dream/package.html
+++ b/one2dream/package.html
@@ -113,7 +113,7 @@
 </div>
 <div>
   <div class="offerWorks">
-    <a class="offer active-offer">Медецинские услуги</a>
+    <a class="offer active-offer">Медицинские услуги</a>
     <a class="offer">Оформление</a>
     <a class="offer">Организация</a>
 
