--- a/Domolend/index.html
+++ b/Domolend/index.html
@@ -454,7 +454,7 @@
 		<div class="width1000 creaters">Создание и разработка сайта &copy; Intellectus-studio 2016</div>
 	</div>
 </footer>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script type="text/javascript" src="js/js.js"></script>
 </body>
 </html>
