--- a/Domolend/account.html
+++ b/Domolend/account.html
@@ -72,6 +72,7 @@
 
     </div>
 </header>
+<div class="menu">
 <div class="menu width1000">
     <ul>
         <li><img src="img/ball.png" alt="Нитки" title="Нитки"/><span>Текстиль</span>
@@ -128,20 +129,27 @@
         </li>
     </ul>
 </div>
-
+</div>
 <div class="width1000 breadcrumbs">
     <h3>ЛИЧНЫЙ КАБИНЕТ</h3>
-    <a href="index.html">На главную</a>
-</div>
-<div class="width1000">
-    <div>
-        <ul>
-            <li>Личный кабинет</li>
-            <li>История покупок</li>
-            <li>Личная информация</li>
-            <li>Выход</li>
-        </ul>
+    <div class="breads">
+        <a href="index.html">На главную</a>
     </div>
+</div>
+<div class="width1000 personal">
+
+        <ul class="pAccount">
+            <li class="activePAccount"><a href="#">Личный кабинет</a></li>
+            <li><a href="account1.html">История покупок</a></li>
+            <li><a href="account2.html">Личная информация</a></li>
+            <li><a href="#">Выход</a></li>
+        </ul>
+
+    <div class="f_l_m_name">
+        <h6>Здраствуйте  Ф.И.О.</h6>
+        Ваш личный счет состовляет:  <span>###</span> грн.
+    </div>
+
 </div>
 
 
@@ -212,7 +220,7 @@
         <div class="width1000 creaters">Создание и разработка сайта &copy; Intellectus-studio 2016</div>
     </div>
 </footer>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script type="text/javascript" src="js/js.js"></script>
 </body>
 </html>
