--- a/Domolend/index.html
+++ b/Domolend/index.html
@@ -71,6 +71,7 @@
 
 	</div>
 </header>
+<div class="menu">
 <div class="menu width1000">
 	<ul>
 		<li><img src="img/ball.png" alt="Нитки" title="Нитки"/><span>Текстиль</span>
@@ -127,6 +128,7 @@
 		</li>
 	</ul>
 </div>
+	</div>
 <!--слайдер-->
 
 <div class="banner">
@@ -363,7 +365,7 @@
 				<a href="#">Читать далее</a>
 			</div>
 		</div>
-		<div class="butt texts">Все новости</div>
+		<a href="News.html" class="butt texts">Все новости</a>
 	</div>
 </div>
 
